plugins {
    id 'org.springframework.boot' version '2.3.3.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.pocketchat'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "Hoxton.SR7")
}

// Put it ahead of the dependencies below, so it can be recognized by the Spring Boot and remove invalid properties error.
compileJava.inputs.files(processResources)

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-integration'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-amqp' // Used for RabbiMQ
    // Create compatibility with libraries, solves problem when creating JWT token in JWTUtil.java file.
    compile('javax.xml.bind:jaxb-api')
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation "org.webjars:stomp-websocket:2.3.3"
    implementation "org.webjars:sockjs-client:1.0.2"
    implementation 'com.google.code.gson:gson'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'javax.validation:validation-api:2.0.1.Final' // Missing javax.validation in Spring Boot 2.3.0
    implementation 'com.twilio.sdk:twilio:7.50.0' // Send SMS, WhatsApp messages
    implementation 'org.apache.commons:commons-lang3' // For convert Exception's stack trace to string
    implementation 'org.passay:passay:1.6.0' // Random secure password generator, validate changed passwords' strength

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Annotation process for recognizing properties' values
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.junit.jupiter:junit-jupiter' // Use JUnit 5. Following https://www.baeldung.com/junit-5-gradle
    testImplementation 'org.mockito:mockito-junit-jupiter'

    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.integration:spring-integration-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

test {
    useJUnitPlatform()
}
